--- a/style.css
+++ b/style.css
@@ -33,17 +33,24 @@ h1{
     background-color: #0303202;
     margin-bottom: 10px;
     height:50px;
+    width:235px;
     font-size: 2em;
     overflow: hidden;
     white-space:nowrap;
-    padding-left: 10px
+    padding-left: 10px;
+    border-radius: 10px;
 }
+
+
 input[type=button]{
     background-color: #ffa8bc;
     height:50px;
     width:50px;
+    font-family:'Inconsolata', monospace;;
     font-size: 1em;
     border-radius:10px;
     margin:3px;
 }
+
+
 
